--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "description": "",
   "dependencies": {
     "bootstrap": "^5.3.3",
-    "lodash": "^4.17.21"
+    "express": "^4.19.2",
+    "lodash": "^4.17.21",
+    "nodemon": "^3.1.4"
   }
 }
