--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.3",
     "express": "^4.19.2",
     "lodash": "^4.17.21",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.4"
   }
 }
